Schedule the certificate refresh job when the root CA changes